# GenreRecognizer

./: Augmentation_Audios.ipynb  FeatureExtract.ipynb  Model.ipynb  README.md  pyproject.toml
Dataset/: SECRET.txt
Features/: FeatureExtract.ipynb
Model Machine Learning/: Model.ipynb
