[project]
name = "audio-project"
version = "0.1.0"
description = ""
authors = [
    {name = "ayresz",email = "matheusayressantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "ipy (>=1.1,<2.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jax (>=0.5.3,<0.6.0)",
    "cv (>=1.0.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
